Refactor URL handling to use URI.create() for improved readability and consistency
Co-authored-by: Copilot <copilot@github.com>